--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>jxls</artifactId>
             <version>2.2.9</version>
         </dependency>
+             
+        <dependency>
+            <groupId>org.jxls</groupId>
+            <artifactId>jxls-jexcel</artifactId>
+            <version>1.0.7</version>
+        </dependency>
     </dependencies>
 
     <build>
